kubernetes/example/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: example-web
spec:
  type: ClusterIP
  selector:
    app: example-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
