kubernetes/example/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kube.informatik.uni-leipzig.de
      secretName: kube.informatik.uni-leipzig.de-tls
  rules:
    - host: kube.informatik.uni-leipzig.de
      http:
        paths:
          - path: /example
            pathType: Prefix
            backend:
              service:
                name: kuard
                port:
                  number: 80
